# plywood-lamp

./: Cargo.toml  LICENSE  README.md  justfile
.cargo/: config.toml
cad/: plywood_lamp.dxf  plywood_lamp.f3d
control_scripts/: cycle_body.json  request_daylight_cycle.sh  request_off.sh  request_on.sh  set_body.json
esp32_project/src/components/: server.rs
esp32_project/src/components/leds/: controller.rs  led_controller.rs  led_runner.rs  runner.rs
esp32_project/src/components/leds/effects/: color.rs  effect.rs  moveto.rs
lamp-esp32/: Cargo.toml
lamp-esp32/src/: lib.rs
lamp-esp32/src/components/: mod.rs
lamp-esp32/src/components/leds/: runner.rs
lamp-esp32/src/components/leds/effects/: mod.rs  moveto.rs
lamp-esp32/src/components/server/: mod.rs  request.rs  server.rs
lamp-esp32/src/leds/: controller.rs  mod.rs  runner.rs
lamp-esp32/src/leds/effects/: daylight_cycle.rs  effect.rs  mod.rs  move_to.rs
lamp-esp32/src/server/: mod.rs  parse_error.rs  request.rs  response_builder.rs  server.rs  wifi.rs
lamp-esp32/src/types/: color.rs  global_instant.rs  global_time.rs  mod.rs  ranges.rs
src/components/: led_controller.rs  mod.rs  server.rs
src/components/leds/: led_effects.rs  mod.rs
